@@ -1,3 +1,2 @@
 top_builddir=..
 DOMAIN=apport
-XGETTEXT_OPTIONS=--language=python
