@@ -1,8 +1,8 @@
 [encoding: UTF-8]
-gtk/apport-gtk
+gtk/apport-gtk.py
 gtk/apport-gtk.glade
 gtk/apport-gtk.desktop.in
-qt4/apport-qt
+qt4/apport-qt.py
 qt4/apport-qt.desktop.in
-cli/apport-cli
+cli/apport-cli.py
 apport/ui.py
